# nu_coincidence

./: .buildinfo  .gitattributes  .gitignore  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: api.doctree  modules.doctree  nu_coincidence.blazar_nu.base.doctree  nu_coincidence.blazar_nu.coincidence.doctree  nu_coincidence.blazar_nu.connected.doctree  nu_coincidence.blazar_nu.doctree  nu_coincidence.coincidence.doctree  nu_coincidence.config.doctree  nu_coincidence.distributions.cosmological_distribution.doctree  nu_coincidence.distributions.doctree  nu_coincidence.doctree  nu_coincidence.neutrinos.doctree  nu_coincidence.neutrinos.icecube.doctree  nu_coincidence.pop_nu.base.doctree  nu_coincidence.pop_nu.coincidence.doctree  nu_coincidence.pop_nu.doctree  nu_coincidence.populations.aux_samplers.doctree  nu_coincidence.populations.doctree  (+10 more)
_sources/: index.rst.txt
api/: api.html  modules.html  nu_coincidence.blazar_nu.base.html  nu_coincidence.blazar_nu.coincidence.html  nu_coincidence.blazar_nu.connected.html  nu_coincidence.blazar_nu.html  nu_coincidence.coincidence.html  nu_coincidence.config.html  nu_coincidence.distributions.cosmological_distribution.html  nu_coincidence.distributions.html  nu_coincidence.html  nu_coincidence.neutrinos.html  nu_coincidence.neutrinos.icecube.html  nu_coincidence.pop_nu.base.html  nu_coincidence.pop_nu.coincidence.html  nu_coincidence.pop_nu.html  nu_coincidence.populations.aux_samplers.html  nu_coincidence.populations.html  nu_coincidence.populations.popsynth_wrapper.html  nu_coincidence.populations.selection.html  nu_coincidence.populations.spatial_populations.html  nu_coincidence.simulation.html  nu_coincidence.utils.fluxes.html  nu_coincidence.utils.html  nu_coincidence.utils.package_data.html  nu_coincidence.utils.parallel.html  nu_coincidence.utils.parameter_server.html  nu_coincidence.utils.plotting.html
cosmic_coincidence/: __init__.py  _version.py  coincidence.py  popsynth_wrapper.py  population.py  simulation.py
docs/: conf.py  index.rst
examples/: blazar_flare_data.md  blazar_sim.md  chance_coincidence.md  combined_sim.md  connected_model.md  constraints.md  fermi_data.md  icecube_alert_data.md  nu_sim.md  sim_script.py  spatial_coincidence.md  testing.md  toy_flare_model.md
notebooks/: coincidence_sim.html  connected_sim.html
nu_coincidence/: __init__.py  _version.py  simulation.py
tests/: conftest.py  test_blazar_nu.py  test_blazar_sim.py  test_nu_sim.py
(+135 files in other folders)
