[metadata]
name = cosmic_coincidence
description = Invesitigating coincident multimessenger detections
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/cescalara/cosmic_coincidence
author_email = capel.francesca@gmail.com
author = Francesca Capel
requires_python = >=3.0

project_urls =
    Bug Tracker = https://github.com/cescalara/cosmic_coincidence/issues
    Source Code = https://github.com/cescalara/cosmic_coincidence

[options]
packages = find:
install_requires =
    numpy
    scipy
    matplotlib
    astropy
    popsynth
    jupytext

[versioneer]
VCS=git
style=pep440
versionfile_source=cosmic_coincidence/_version.py
versionfile_build=cosmic_coincidence/_version.py
tag_prefix=v
parentdir_prefix=cosmic_coincidence-