[metadata]
name = nu_coincidence
description = Investigating coincident source-neutrino detections
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/cescalara/nu_coincidence
author_email = capel.francesca@gmail.com
author = Francesca Capel
requires_python = >=3.0

project_urls =
    Bug Tracker = https://github.com/cescalara/nu_coincidence/issues
    Source Code = https://github.com/cescalara/nu_coincidence

[options]
packages = find:
install_requires =
    numpy
    scipy
    matplotlib
    astropy
    popsynth
    jupytext

[versioneer]
VCS=git
style=pep440
versionfile_source=nu_coincidence/_version.py
versionfile_build=nu_coincidence/_version.py
tag_prefix=v
parentdir_prefix=nu_coincidence-